# CrewAI_A-Personal-stock-investment-guide

./: .gitattributes  .gitignore  README.md  pyproject.toml
output/: Morocco_Long_Term_Investment_Report.md  company_deep_research.json  morocco_investing_guide.md  morocco_top_sectors.json  sharia_approved_sectors.json  shortlisted_companies.json
src/personal_stock_investment_guide/: crew.py  main.py
src/personal_stock_investment_guide/config/: agents.yaml  tasks.yaml
